--- a/.github/workflow/buildmod.yml
+++ b/.github/workflow/buildmod.yml
@@ -1,44 +1,79 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
-
-name: Gradle Package
+name: Build and Publish Minecraft Mod
 
 on:
+  push:
+    branches: [main] # Kích hoạt khi có thay đổi mã nguồn trên nhánh main
+  workflow_dispatch: # Hỗ trợ kích hoạt thủ công
   release:
-    types: [created]
+    types: [created] # Kích hoạt khi tạo release
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: write
+      contents: write # Cần để upload release asset
+      packages: write # Cần nếu publish lên GitHub Packages
 
     steps:
+    # Checkout mã nguồn
     - uses: actions/checkout@v4
+
+    # Cài đặt JDK 17 (phù hợp với hầu hết Minecraft modding)
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
+    # Thêm quyền thực thi cho gradlew
+    - name: Make gradlew executable
+      run: chmod +x gradlew
+
+    # Lưu và khôi phục cache Gradle
+    - name: Cache Gradle dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
+    # Cài đặt Gradle
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
+    # Build mod với Gradle, sử dụng --build-cache
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --build-cache
 
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
-    - name: Publish to GitHub Packages
-      run: ./gradlew publish
+    # Tự động lấy file .jar từ build/libs/
+    - name: Find JAR file
+      id: find-jar
+      run: |
+        JAR_FILE=$(find build/libs -type f -name "*.jar" ! -name "*-sources.jar" ! -name "*-javadoc.jar" | head -n 1)
+        echo "jar_file=$JAR_FILE" >> $GITHUB_OUTPUT
+        echo "jar_name=$(basename $JAR_FILE)" >> $GITHUB_OUTPUT
+      shell: bash
+
+    # Upload file JAR lên GitHub Release (chỉ khi chạy do release)
+    - name: Upload Mod JAR to Release
+      if: github.event_name == 'release' # Chỉ chạy khi sự kiện là release
+      uses: actions/upload-release-asset@v1
       env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ${{ steps.find-jar.outputs.jar_file }}
+        asset_name: ${{ steps.find-jar.outputs.jar_name }}
+        asset_content_type: application/java-archive
+
+    # (Tùy chọn) Upload file JAR như artifact khi không phải release
+    - name: Upload JAR as Artifact
+      if: github.event_name != 'release' # Chạy khi không phải sự kiện release
+      uses: actions/upload-artifact@v4
+      with:
+        name: mod-jar
+        path: ${{ steps.find-jar.outputs.jar_file }}
+        retention-days: 7 # Lưu artifact trong 7 ngày
