--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,3 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
-
 name: build
 on: [pull_request, push]
 
@@ -12,19 +7,55 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
+
       - name: validate gradle wrapper
         uses: gradle/actions/wrapper-validation@v4
+
       - name: setup jdk
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'microsoft'
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+
       - name: build
         run: ./gradlew build
-      - name: capture build artifacts
+
+      - name: Get short commit hash
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Prepare Artifacts
+        run: |
+          sha_short=${{ steps.vars.outputs.sha_short }}
+          # Rename the original jar file
+          original_jar_path=$(find build/libs -name "*.jar")
+          mv "$original_jar_path" "build/libs/Fly-mod-$sha_short.jar"
+          # Create the zip file from the renamed jar
+          zip -j "Fly-mod-$sha_short.zip" "build/libs/Fly-mod-$sha_short.jar"
+
+      - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
-          path: build/libs/
+          name: Fly-mod-${{ steps.vars.outputs.sha_short }}.jar
+          path: build/libs/Fly-mod-${{ steps.vars.outputs.sha_short }}.jar
+          if-no-files-found: error
+
+      - name: Upload ZIP Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Fly-mod-${{ steps.vars.outputs.sha_short }}.zip
+          path: Fly-mod-${{ steps.vars.outputs.sha_short }}.zip
+          if-no-files-found: error
